# python-environment-tools

./: Cargo.toml  set-version.ps1
azure-pipelines/: pre-release.yml
crates/pet/: Cargo.toml
crates/pet-conda/: Cargo.toml
crates/pet-conda/src/: environment_locations.rs  lib.rs  manager.rs  telemetry.rs
crates/pet-conda/tests/: ci_test.rs  manager_test.rs
crates/pet-conda/tests/unix/micromamba-only/conda-meta/: history  python-3.11.0-h1234567_0.json
crates/pet-conda/tests/unix/miniforge3-mamba/conda-meta/: conda-24.1.0-py310h97a54d0_0.json  history  python-3.10.14-h1234567_0.json
crates/pet-conda/tests/unix/miniforge3-mamba/envs/myenv/conda-meta/: history
crates/pet-core/: Cargo.toml
crates/pet-core/src/: manager.rs
crates/pet-env-var-path/: Cargo.toml
crates/pet-fs/: Cargo.toml
crates/pet-global-virtualenvs/: Cargo.toml
crates/pet-homebrew/: Cargo.toml
crates/pet-jsonrpc/: Cargo.toml
crates/pet-linux-global-python/: Cargo.toml
crates/pet-mac-commandlinetools/: Cargo.toml
crates/pet-mac-python-org/: Cargo.toml
crates/pet-mac-xcode/: Cargo.toml
crates/pet-pipenv/: Cargo.toml
crates/pet-pixi/: Cargo.toml
crates/pet-poetry/: Cargo.toml
crates/pet-pyenv/: Cargo.toml
crates/pet-python-utils/: Cargo.toml
crates/pet-reporter/: Cargo.toml
crates/pet-telemetry/: Cargo.toml
crates/pet-uv/: Cargo.toml
crates/pet-venv/: Cargo.toml
crates/pet-virtualenv/: Cargo.toml
crates/pet-virtualenvwrapper/: Cargo.toml
crates/pet-windows-registry/: Cargo.toml
crates/pet-windows-store/: Cargo.toml
crates/pet-winpython/: Cargo.toml
crates/pet/tests/: cli_test.rs
docs/: JSONRPC.md
