[package]
name = "pet-winpython"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pet-core = { path = "../pet-core" }
pet-fs = { path = "../pet-fs" }
pet-python-utils = { path = "../pet-python-utils" }
pet-virtualenv = { path = "../pet-virtualenv" }
log = "0.4.21"
lazy_static = "1.4.0"
regex = "1.10.4"

[dev-dependencies]
tempfile = "3.10"
